--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,8 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "no-unused-vars": "off",
+    "react/prop-types": 0,
     "react/require-default-props": "off",
     "no-console": "off",
     "no-restricted-syntax": [
