--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "react-icons": "^4.6.0",
     "react-uuid": "^2.0.0",
     "uuid": "^9.0.0"
   }
